--- a/watch.html
+++ b/watch.html
@@ -4,7 +4,7 @@
     <script type='text/javascript' src='//pl18979059.profitableratecpm.com/96/88/cb/9688cbe553144eccf9f8893dc99de346.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>24/7 - Live Sports</title>
+    <title>BuffStreams - Player</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
     <style>body{margin:0;font-family:'Segoe UI',sans-serif;background-color:#000;color:#e7ffe7}.container{display:flex;justify-content:center;padding:30px 15px}.content-box{background:#111;border-radius:12px;max-width:1200px;width:100%;display:flex;padding:20px;border:1px solid #222;gap:20px}.main-content{flex:0 0 70%}.ad-center{display:flex;justify-content:center;margin:10px 0}.iframe-container{position:relative;width:100%;padding-top:56.25%;border-radius:10px;overflow:hidden;margin:15px 0}.post-icons{display:none}.iframe-container iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:none;border-radius:10px}.sidebar{flex:0 0 30%;display:flex;flex-direction:column;gap:20px}.sidebar .ad{width:100%;overflow:hidden}@media(max-width:768px){.container{flex-direction:column;padding:10px}.content-box{flex-direction:column;padding:10px;align-items:center}.main-content,.sidebar{width:100%}.sidebar{flex-direction:column;align-items:center;gap:20px;margin-top:20px}.sidebar .ad{width:100%;max-width:100%}.ad-center{justify-content:center;margin:10px 0}.iframe-container{width:100%;padding-top:56.25%}}@media(max-width:600px){.discord-logo{height:200px;margin-top:-50px}.discord-title{font-size:24px}.discord-subtext{font-size:14px}.discord-arrow{font-size:20px}}</style></head>
 <body>
