--- a/watch.html
+++ b/watch.html
@@ -85,15 +85,28 @@
       document.body.innerHTML = "<p>No video URL provided.</p>";
     }
   </script>
-        <script type="text/javascript">var _Hasync = _Hasync || [];
-            _Hasync.push(['Histats.start', '1,4915398,4,0,0,0,00010000']);
-            _Hasync.push(['Histats.fasi', '1']);
-            _Hasync.push(['Histats.track_hits', '']);
-            (function () {
-                var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-                hs.src = ('//s10.histats.com/js15_as.js');
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-            })();</script>
-        <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4915398&amp;101" alt="free stats"
-                    border="0" /></a></noscript>
+      <!-- Histats.com  (div with counter) -->
+<div id="histats_counter" style="display: none !important;"></div>
+
+<!-- Histats.com  START  (async) -->
+<script type="text/javascript">
+    var _Hasync = _Hasync || [];
+    _Hasync.push(['Histats.start', '1,4954898,4,511,95,18,00000000']);
+    _Hasync.push(['Histats.fasi', '1']);
+    _Hasync.push(['Histats.track_hits', '']);
+
+    (function () {
+        var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+        hs.src = ('//s10.histats.com/js15_as.js');
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+    })();
+</script>
+
+<noscript>
+    <a href="/" target="_blank">
+        <img src="//sstatic1.histats.com/0.gif?4954898&amp;101" alt="web stats" border="0"
+            style="display: none !important;" />
+    </a>
+</noscript>
+<!-- Histats.com  END -->
 </body></html>
