--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </a>
       <nav class="nav-links">
         <a href="/category/Soccer-streams">Soccer Streams</a>
-        <a href="/category/a.m-football-streams">NFL Streams</a>
+        <a href="/category/nfl-streams">NFL Streams</a>
         <a href="/category/ufc-streams">UFC Streams</a>
         <a href="/category/nba-streams">NBA Streams</a>
         <a href="/category/baseball-streams">Baseball</a>
