--- a/watch.html
+++ b/watch.html
@@ -28,7 +28,7 @@
 
 
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/m773TTNr" target="_blank" style="
+        <a href="https://discord.com/invite/xjdtGqzuhf" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -175,4 +175,5 @@
 
 
 </body>
+
 </html>
