--- a/boxing.html
+++ b/boxing.html
@@ -31,7 +31,7 @@
 
     <!-- Discord -->
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/m773TTNr" target="_blank" style="
+        <a href="https://discord.com/invite/xjdtGqzuhf" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -190,4 +190,5 @@
         </a>
     </noscript>
 </body>
+
 </html>
